[gd_scene load_steps=12 format=3 uid="uid://8mieo3lk4xkx"]

[ext_resource type="Script" path="res://scenes/characters/mommy_mushroom.gd" id="1_q4qni"]
[ext_resource type="Texture2D" uid="uid://dfbpy0ixndry3" path="res://libresprite/mommymushroom.png" id="2_282n7"]

[sub_resource type="SphereShape3D" id="SphereShape3D_x1npn"]
radius = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_10wge"]
atlas = ExtResource("2_282n7")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8f2ey"]
atlas = ExtResource("2_282n7")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0l22"]
atlas = ExtResource("2_282n7")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_oswya"]
atlas = ExtResource("2_282n7")
region = Rect2(384, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_4vk1n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_10wge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8f2ey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0l22")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oswya")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="SphereShape3D" id="SphereShape3D_7ibb4"]
radius = 3.0

[sub_resource type="SphereShape3D" id="SphereShape3D_2kkgg"]

[sub_resource type="SphereShape3D" id="SphereShape3D_yhn4y"]
radius = 5.0

[node name="MommyMushroom" type="CharacterBody3D"]
collision_layer = 256
script = ExtResource("1_q4qni")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_x1npn")

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
pixel_size = 0.015
billboard = 2
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_4vk1n")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.8935

[node name="ChildDetector" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 512
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="ChildDetector"]
shape = SubResource("SphereShape3D_7ibb4")

[node name="CameraZoneDetector" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2147483648
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="CameraZoneDetector"]
shape = SubResource("SphereShape3D_2kkgg")

[node name="CommandZone" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 512
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="CommandZone"]
shape = SubResource("SphereShape3D_yhn4y")

[connection signal="body_entered" from="ChildDetector" to="." method="_on_child_detector_body_entered"]
